# musictobelightapi

./: .gitignore  db.sqlite3  pyproject.toml
docs/: config.md  history.md
docs/diagram_rest/: MusicToBeLight.postman_collection.json  dbdiagram.md
docs/old_codes/: image.py  image_admin.py  image_serializer.py
project/: settings.py  urls.py
project/accounts/: exceptions.py  forms.py  managers.py  urls.py
project/accounts/admin/: __init__.py  account_admin.py  image_admin.py  profile_admin.py
project/accounts/migrations/: 0001_initial.py  0002_initial.py  0003_alter_profile_description_alter_profile_name.py
project/accounts/models/: __init__.py  account.py  account_model.py  image.py  image_model.py  profile.py  profile_model.py  reset_password_number.py  reset_password_number_model.py
project/accounts/serializers/: __init__.py  account_create_serializer.py  account_new_password_serializer.py  account_serializer.py  image_serializer.py  profile_serializer.py
project/accounts/views/: __init__.py  account_view.py  profile_view.py
project/bases/: apps.py  models.py
project/commons/: apps.py
project/medias/: admin.py  apps.py
project/medias/migrations/: 0001_initial.py
project/medias/models/: __init__.py  audio.py  audio_model.py  image.py  image_model.py
project/medias/serializers/: __init__.py  audio_serializer.py  image_serializer.py
project/musics/: admin.py  apps.py  urls.py
project/musics/migrations/: 0001_initial.py  0002_alter_album_listeners.py
project/musics/models/: __init__.py  album.py  album_model.py  sound.py  sound_model.py
(+6 files in other folders)
